--- a/package.json
+++ b/package.json
@@ -9,5 +9,20 @@
   "scripts": {
     "start": "node index.js",
     "test": "node test.js"
-  }
+  },
+  "dependencies": {
+    "ejs": "^2.5.6",
+    "express": "^4.15.2",
+    "pg": "^8.5.1"
+  },
+  "devDependencies": {
+    "got": "^11.3.0",
+    "tape": "^4.7.0"
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ],
+  "license": "MIT"
 }
