--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.15.2",
+    "express": "^4.17.1",
     "pg": "^8.5.1"
   },
   "devDependencies": {
@@ -23,5 +23,14 @@
     "heroku",
     "express"
   ],
-  "license": "MIT"
+  "license": "UNLICENSED",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/joliao/SewingApp.git"
+  },
+  "author": "Joy Liao",
+  "bugs": {
+    "url": "https://github.com/joliao/SewingApp/issues"
+  },
+  "homepage": "https://github.com/joliao/SewingApp#readme"
 }
