--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.17.1",
+    "heroku-client": "^3.1.0",
     "pg": "^8.5.1"
   },
   "devDependencies": {
