--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.17.1",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "postgrest": "^7.0.1"
   },
   "devDependencies": {
     "got": "^11.3.0",
